[package]
name = "abc_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version= "4.0.27", features= ["derive"] }
derive_more = "0.99.17"
nom = "7.1.1"
nom_locate = "4.0.0"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
